# PawalNativeApi

./: CMakeLists.txt  LICENSE  README.md  build.cmd  build.sh  build_console.cmd  build_console.sh
Console/: App.cpp  CMakeLists.txt
include/pawal/: AnosuApi.hpp  ApiError.hpp  IPawalApi.hpp  Noncopyable.hpp  StringTool.hpp  SystemMacor.hpp
src/: AnosuApi.cpp  CMakeLists.txt  StringTool.cpp
